# maratron-monorepo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  REPO_SYNC.md  VISUAL_REDESIGN_GUIDE.md  docker-compose.yml  git-push  git-sync-push  marathon-plan-analysis.md  package-lock.json  package.json  performance-check.sh  pull-from-repos.sh  redis-benchmark.sh  repo-sync.sh  running-algorithm-technical-specification.md  start.sh  sync-repos.sh  test-mcp.js
.gemini/: settings.json
.github/: dependabot.yml
apps/ai/: .env.example  CLAUDE.md  README.md  REPOSITORY_DOCUMENTATION.md  pyproject.toml  run_server.py  server_dev.py
apps/ai/docs/: INTEGRATION.md  examples.py
apps/ai/scripts/: health_check.py
apps/ai/src/maratron_ai/: __init__.py  advanced_tools.py  api.py  competition_racing_tools.py  config.py  database_utils.py  equipment_gear_tools.py  health.py  health_recovery_tools.py  logging_config.py  route_environment_tools.py  server.py  weather_tools.py
apps/ai/src/maratron_ai/security/: __init__.py  data_isolation.py
apps/ai/src/maratron_ai/user_context/: __init__.py  context.py  intelligence.py  memory.py  performance_test.py  security.py  smart_tools.py  tools.py
apps/ai/tests/: conftest.py  test_runner.py
apps/ai/tests/integration/: test_advanced_mcp_integration.py.backup  test_database_integration.py
apps/ai/tests/unit/: test_advanced_tools.py  test_competition_racing_tools.py.backup  test_config.py  test_database_tools.py  test_database_utils.py  test_equipment_gear_tools.py.backup  test_health_recovery_tools.py.backup  test_route_environment_tools.py.backup  test_security.py
docs/: MCP_LLM_INTEGRATION.md  README.md  ai-server.md  api-reference.md  architecture.md  development.md  docker-setup.md  error-handling-validation.md  performance-monitoring.md  production-deployment.md  redis-caching.md  web-app.md  (+2 more)
(+219 files in other folders)
